fix: ol > li text align

--- a/src/pages/ContentPage/ContentPage.module.scss
+++ b/src/pages/ContentPage/ContentPage.module.scss
@@ -16,6 +16,12 @@
       }
     }
   }
+
+  ol {
+    li {
+      text-align: left;
+    }
+  }
   code {
     text-wrap-mode: initial;
     text-wrap-style: auto;
